--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 style="text-align: center">Hi! I'm Martheena Carmel Balcoba!</h1>
     <h3 style="text-align: center">Welcome to My Page!</h3>
     <h4 style="text-align: center">Project name: martheenabalcoba_q1gfa1</h4>
-    <p style="text-align: center"><a href="">GitHub Project Link</a>
+    <p style="text-align: center"><a href="https://marcellaaeon.github.io/martheenabalcoba_q1gfa1/">GitHub Project Link</a>
     <a href="aboutme.html">About Me</a></p>
     </div>
     <p style="text-align: center"><img src="Pictures/new pfp.jpg"></p>
